When zs provider is stopped during OAuthToken fetch, stop fetching.

In the current state, if zero suggest provider is stopped while 
waiting for a contextual suggestion fetcher to be produced (i.e. 
OnContextualSuggestionsFetcherAvailable did not yet run), the Stop
action is ignored and the fetch is still performed.

This CL fixes this issue.

Also, maybe on later requests, the fetcher doesn't attach
OAuth2 tokens because the system thinks the fetcher is still
running.  This change makes this dependable.  (If it's no
longer running, make sure to delete the fetcher.)

TBR=rohitrao
for mechanical changes to ios/chrome/browser/autocomplete/*

Bug: 751837
Change-Id: I1f84ae9658d509d2159964d05f25612e93a67305
Reviewed-on: https://chromium-review.googlesource.com/621226
Commit-Queue: Gheorghe Comanici <gcomanici@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497785}
Former-commit-id: 86bbdf613f979271a555fa02d6564e4482a6ff1f