components/omnibox/browser/autocomplete_provider_client.h
@@ -61,8 +61,8 @@ class AutocompleteProviderClient {
   virtual InMemoryURLIndex* GetInMemoryURLIndex() = 0;
   virtual TemplateURLService* GetTemplateURLService() = 0;
   virtual const TemplateURLService* GetTemplateURLService() const = 0;
-  virtual ContextualSuggestionsService* GetContextualSuggestionsService()
-      const = 0;
+  virtual ContextualSuggestionsService* GetContextualSuggestionsService(
+      bool create_if_necessary) const = 0;
   virtual const SearchTermsData& GetSearchTermsData() const = 0;
   virtual scoped_refptr<ShortcutsBackend> GetShortcutsBackend() = 0;
   virtual scoped_refptr<ShortcutsBackend> GetShortcutsBackendIfExists() = 0;
